--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -7,9 +7,9 @@
         = @purchase.product.full_title
         i.icn.is-link = link_to "🔗", @purchase.product
       h2
-        = @purchase.variation.which.model_name
+        = @purchase.variation.types
         | : 
-        = @purchase.variation.which.value
+        = @purchase.variation.title
   - else
     h1
       = @purchase.product.full_title
