--- a/app/views/sales/_sale.html.slim
+++ b/app/views/sales/_sale.html.slim
@@ -1,7 +1,7 @@
 tr.hoverable id="#{dom_id sale}" data-action="click->table#goTo" data-table-url-param=sale_path(sale)
   td = sale.woo_id
   td
-    = sale.customer.full_name
+    span.bold = sale.customer.full_name
     br
     = sale.customer.email
     ul.product-variations
