--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -10,11 +10,12 @@ main.wide
     table role="grid" data-controller="table"
       thead
         tr
-          th Woo ID
+          th Image
           th Customer and Products
+          th.right Price
           th Date
           th Status
-          th.right Price
+          th Woo ID
           th.right Actions
       tbody
         = render @sales
