--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,7 @@ html
             li = link_to "Sales", sales_path
             li = link_to "Purchases", purchases_path
           nav  
+            li = link_to "Warehouses", warehouses_path
             li = link_to "Products", products_path
 
           nav.dropdown role="navigation" aria-label="dropdown navigation"
