--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -7,7 +7,7 @@
         = @purchase.product.full_title
         i.icn.is-link = link_to "🔗", @purchase.product
       h2
-        = @purchase.variation.types
+        = @purchase.variation.types_name
         | : 
         = @purchase.variation.title
   - else
