--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -12,7 +12,7 @@
     .stimulus#purchase-variation-select data-purchase-variation-target="select"
       - if purchase.product&.variations.present?
         = form.label :variation
-        = form.collection_select :variation_id, purchase.product.variations, :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
+        = form.collection_select :variation_id, purchase.product.variations.includes(:size, :color, :version), :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
 
   = form.label :order_reference
   = form.text_field :order_reference
