--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -90,6 +90,11 @@ button.is-inverted:hover {
   background-color: rgba(255, 0, 0, 0.1);
 }
 
+.btn.l {
+  padding: 0.65em 1em;
+  font-size: calc(var(--font-size) * 0.75);
+}
+
 .btn.xl {
   padding: 0.75em;
   font-size: calc(var(--font-size) * 1);
