--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -60,3 +60,25 @@ form.payment input[type="submit"] {
 .sales-form__product_fields {
   margin: 1.5rem 0;
 }
+
+.form__img-card {
+  transform-origin: bottom;
+  transition: transform 0.3s;
+
+  &.removed {
+    animation: fade-out 400ms ease-in;
+  }
+}
+
+.form__img-card:hover {
+  transform: scale3d(1.2, 1.2, 1.2);
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
