--- a/app/assets/stylesheets/utility.css
+++ b/app/assets/stylesheets/utility.css
@@ -10,6 +10,10 @@
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -18,8 +22,16 @@
   align-items: center;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.wrap {
+  flex-wrap: wrap;
 }
 
 .mono {
