--- a/app/views/warehouses/show.html.slim
+++ b/app/views/warehouses/show.html.slim
@@ -2,8 +2,25 @@
 
 = render "_shared/nav-show", model: @warehouse
 
-main.wide.no-bd
-  .cards
+main.wide.w-pd
+  .cards.items-center
+    - if @warehouse.images.present?
+      .gallery data-controller="gallery"
+        - if @warehouse.images.size > 1
+          .card.gallery__nav
+            - @warehouse.images.each do |img|
+              = render "_shared/preloadable_img", src: url_for(img.representation(:nano)), width: 70, \
+                data: { \
+                  id: @warehouse.images.index(img),\
+                  preview: url_for(img.representation(:preview)), \
+                  "gallery-target": "slide", \
+                  "action": "click->gallery#select" \
+                }
+        .gallery__main
+          - if @warehouse.images.size > 1
+            button.gallery__btn data-action="gallery#prev" ←
+            button.gallery__btn data-action="gallery#next" →
+          = render "_shared/preloadable_img", src: @warehouse.images.first.representation(:preview).url, data: {"gallery-target": "main"}
     .card.grow
       .title Name
       p = @warehouse.name
