--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -13,7 +13,8 @@ main.wide
           th Image
           th Customer and Products
           th.right Price
-          th Date
+          th Date Created
+          th Updated ▾
           th Status
           th Woo ID
           th.right Actions
