--- a/app/assets/stylesheets/variables.css
+++ b/app/assets/stylesheets/variables.css
@@ -18,4 +18,6 @@
   --box-shadow-menu: 0px 2px 8px 0px rgba(0, 0, 0, 0.05);
   --rgb-debt-color: 245, 179, 50;
   --rgb-paid-color: 67, 160, 71;
+  --rgb-active-status-color: 50, 200, 50;
+  --rgb-inactive-status-color: 200, 50, 50;
 }
