--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -1,6 +1,9 @@
 = form_with(model: product) do |form|
   = render "_shared/notice-err", model: product
 
+  = form.label :woo_id, "Woo ID"
+  = form.text_field :woo_id
+
   = form.label :supplier
   = form.collection_select(:supplier_ids, Supplier.all, :id, :title, { class: "select", include_blank: true }, {multiple: true, data: { controller: "slim-multi-select" }})
 
@@ -10,7 +13,7 @@
   = form.label :title
   = form.text_field :title
 
-  = form.label :sku
+  = form.label :sku, "SKU"
   = form.text_field :sku
 
   = form.label :size
