--- a/app/views/_shared/_nav-new.html.slim
+++ b/app/views/_shared/_nav-new.html.slim
@@ -2,5 +2,5 @@ nav
   ul
     li
       = link_to "Back", "javascript:history.back()"
-      h1 New #{model.model_name.singular}
+      h1 New #{model.model_name.name.titleize.singularize}
       h4
