--- a/app/views/_shared/_nav-show.html.slim
+++ b/app/views/_shared/_nav-show.html.slim
@@ -2,9 +2,7 @@ nav
   ul
     li
       = link_to "Back", "javascript:history.back()"
-      - if defined?(custom_heading)
-        = yield
-      - else
+      hgroup
         h1 #{format_show_page_title(model)}
         h4 #{model.model_name.name}
   ul.gap
@@ -12,8 +10,5 @@ nav
       a.btn.l.is-primary.translate-y-1 href="#{url_for controller: "#{model.model_name.plural}", action: "edit", id: model}"
         i.icn ✏️
         | Edit
-    - if defined?(is_purchasable)
-      li
-        a.btn.l.is-primary.translate-y-1 href="#{url_for new_purchase_path(product: model)}" 
-          i.icn 💰
-          | Purchase
+    = yield
+
