--- a/app/assets/stylesheets/variables.css
+++ b/app/assets/stylesheets/variables.css
@@ -20,4 +20,5 @@
   --rgb-paid-color: 67, 160, 71;
   --rgb-active-status-color: 0, 150, 40;
   --rgb-inactive-status-color: 150, 50, 0;
+  --danger-color: 211, 47, 47;
 }
