--- a/app/views/brands/_brand.html.slim
+++ b/app/views/brands/_brand.html.slim
@@ -12,6 +12,4 @@ tr id="#{dom_id brand}"
       = link_to brand
         i.icn 📄
         | Show
-      = link_to edit_brand_path(brand)
-        i.icn ✏️
-        | Edit
+      = render "_shared/action-edit", route: edit_brand_path(brand)
