--- a/app/views/colors/_color.html.slim
+++ b/app/views/colors/_color.html.slim
@@ -12,6 +12,4 @@ tr id="#{dom_id color}"
       = link_to color
         i.icn 📄
         | Show
-      = link_to edit_color_path(color)
-        i.icn ✏️
-        | Edit
+      = render "_shared/action-edit", route: edit_color_path(color)
