--- a/app/views/customers/_customer.html.slim
+++ b/app/views/customers/_customer.html.slim
@@ -6,6 +6,4 @@ tr.hoverable id="#{dom_id customer}" data-action="click->table#goTo" data-table-
 
   - if action_name != "show" 
     td.actions
-      = link_to edit_customer_path(customer), {class: "no-events"}
-        i.icn ✏️
-        | Edit
+      = render "_shared/action-edit", route: edit_customer_path(customer)
