--- a/app/views/sales/_sale.html.slim
+++ b/app/views/sales/_sale.html.slim
@@ -1,7 +1,7 @@
 tr.hoverable id="#{dom_id sale}" data-action="click->table#goTo" data-table-url-param=sale_path(sale)
   td.text-center
     - sale.product_sales.each do |ps|
-      = render "_shared/preloadable_img", src: product_thumb_url(ps.product), class_names: "zoomable", width: 100
+      = render "_shared/preloadable_img", src: thumb_url(ps.product), class_names: "zoomable", width: 100
   td
     span.bold = sale.customer.full_name
     br
@@ -16,6 +16,4 @@ tr.hoverable id="#{dom_id sale}" data-action="click->table#goTo" data-table-url-
   td = sale.woo_id
   - if action_name != "show" 
     td.actions
-      = link_to edit_sale_path(sale), {class: "no-events"}
-        i.icn ✏️
-        | Edit
+      = render "_shared/action-edit", route: edit_sale_path(sale)
