--- a/app/views/versions/_version.html.slim
+++ b/app/views/versions/_version.html.slim
@@ -8,6 +8,4 @@ tr id="#{dom_id version}"
       = link_to version
         i.icn 📄
         | Show
-      = link_to edit_version_path(version)
-        i.icn ✏️
-        | Edit
+      = render "_shared/action-edit", route: edit_version_path(version)
