--- a/app/views/warehouses/_form.html.slim
+++ b/app/views/warehouses/_form.html.slim
@@ -7,23 +7,25 @@
   = form.label :external_name
   = form.text_field :external_name
 
+  = form.label :cbm
+  = form.text_field :cbm
+
   = form.label :container_tracking_number
   = form.text_field :container_tracking_number
 
   = form.label :courier_tracking_url
   = form.text_field :courier_tracking_url
 
-  = form.label :cbm
-  = form.text_field :cbm
-
   - if warehouse.images.attached?
     br
-    .card.flex.wrap.gap.even-pd.items-end data-controller="removable"
+    .card.flex.wrap.gap.even-pd.items-end
       - warehouse.images.each do |image|
-        .form__img-card data-removable-target="element"
+        .form__img-card
           = form.hidden_field :images, multiple: true, value: image.signed_id
           = render "_shared/preloadable_img", src: image.representation(:thumb).url
-          = link_to "Remove", remove_image_warehouse_path(image), data: { turbo_confirm: "Are you sure?", turbo_method: :delete, action: "click->removable#remove" }
+          = label_tag nil, class: "pd-2 pointer"
+            = check_box_tag "deleted_img_ids[]", image.id, class: "inline checkbox-remove"
+            | Remove image
     br
 
   = form.label :images 
