--- a/app/views/warehouses/_warehouse.html.slim
+++ b/app/views/warehouses/_warehouse.html.slim
@@ -3,11 +3,12 @@ tr.hoverable id="#{dom_id warehouse}" data-action="click->table#goTo" data-table
     strong = warehouse.name
     br
     = warehouse.external_name
-  td.mono = warehouse.container_tracking_number
-  td = warehouse.courier_tracking_url
   td.mono = warehouse.cbm
+  td.mono = warehouse.container_tracking_number
+  - if warehouse.courier_tracking_url
+    td = link_to warehouse.courier_tracking_url, warehouse.courier_tracking_url, target: "_blank", rel: "noopener noreferrer"
+  - else
+    td
   - if action_name != "show" 
     td.actions
-      = link_to edit_warehouse_path(warehouse), {class: "no-events"}
-        i.icn ✏️
-        | Edit
+      = render "_shared/action-edit", route: edit_warehouse_path(warehouse)
