--- a/app/views/warehouses/show.html.slim
+++ b/app/views/warehouses/show.html.slim
@@ -1,39 +1,37 @@
 = render "_shared/notice"
 
 = render "_shared/nav-show", model: @warehouse
+  li
+    a.btn href="#{url_for new_purchased_product_path(warehouse_id: @warehouse)}" 
+      i.icn 📦
+      | Add product
 
-main.wide.w-pd
-  .cards.items-center
-    - if @warehouse.images.present?
-      .gallery data-controller="gallery"
-        - if @warehouse.images.size > 1
-          .card.gallery__nav
-            - @warehouse.images.each do |img|
-              = render "_shared/preloadable_img", src: url_for(img.representation(:nano)), width: 70, \
-                data: { \
-                  id: @warehouse.images.index(img),\
-                  preview: url_for(img.representation(:preview)), \
-                  "gallery-target": "slide", \
-                  "action": "click->gallery#select" \
-                }
-        .gallery__main
-          - if @warehouse.images.size > 1
-            button.gallery__btn data-action="gallery#prev" ←
-            button.gallery__btn data-action="gallery#next" →
-          = render "_shared/preloadable_img", src: @warehouse.images.first.representation(:preview).url, data: {"gallery-target": "main"}
-    .card.grow
-      .title Name
-      p = @warehouse.name
-      .title External Name for Clients
-      p = @warehouse.external_name
-      .title Courier Tracking URL
-      p = @warehouse.courier_tracking_url
-    .card
-      .title CBM
-      p = @warehouse.cbm
-      .title Container Tracking Number
-      p = @warehouse.container_tracking_number
-      .title Created At
-      p = format_time @warehouse.created_at
+main.wide.no-bd.flex.flex-col.gap
+  - if @warehouse.purchased_products.present?
+    = render "purchased_products"
+
+
+  .table-card.full-width
+    h3 About Warehouse
+    .cards.items-center.p
+      = render "_shared/gallery", images: @warehouse.images
+      
+      .card.grow
+        .title Name
+        p = @warehouse.name
+        .title External Name for Clients
+        p = safe_blank_render @warehouse.external_name
+        .title CBM
+        p = safe_blank_render @warehouse.cbm
+        .title Container Tracking Number
+        p = safe_blank_render @warehouse.container_tracking_number
+        .title Courier Tracking URL
+        p
+          - if @warehouse.courier_tracking_url.present?
+            = link_to @warehouse.courier_tracking_url, @warehouse.courier_tracking_url, target: "_blank", rel: "noopener noreferrer"
+          - else
+            | -
+        .title Created At
+        p = format_time @warehouse.created_at
 
 = button_to "Destroy this warehouse", warehouse_path(@warehouse), method: :delete, class: "btn-danger"
