--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -57,17 +57,34 @@ button.is-inverted:hover {
 
 .btn {
   display: inline-flex;
-  gap: 2px;
   justify-content: center;
   align-items: center;
+  gap: 2px;
   cursor: pointer;
   border: 1px solid var(--primary-unmuted);
   border-radius: var(--border-radius);
 
   padding: 0.35em 0.6em;
-  font-size: calc(var(--font-size) / 1.2);
 
   width: auto;
+  font-size: calc(var(--font-size) / 1.2);
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.btn-wrapper a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  cursor: pointer;
+  border: 1px solid var(--primary-unmuted);
+  border-radius: var(--border-radius);
+
+  padding: 0.35em 0.6em;
+
+  width: auto;
+  font-size: calc(var(--font-size) / 1.2);
   text-decoration: none;
   white-space: nowrap;
 }
