--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -9,9 +9,7 @@ nav
             = @purchase.product.full_title
             i.icn.is-link = link_to "🔗", @purchase.product
           h2
-            = @purchase.variation.types
-            | : 
-            = @purchase.variation.title
+            = @purchase.variation.type_name_and_value
       - else
         h1
           = @purchase.product.full_title
