--- a/app/views/warehouses/index.html.slim
+++ b/app/views/warehouses/index.html.slim
@@ -13,6 +13,7 @@ main.wide
         th CBM
         th Container Tracking Number
         th Courier Tracking URL
+        th Products
         th.right Actions
     tbody
       = render @warehouses
