--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -3,7 +3,7 @@
 nav
   ul
     li
-      = link_to "Back", "javascript:history.back()"
+      = link_to "Back to index", products_path
       hgroup 
         h1 = @product.title
         h2 = @product.full_title
