--- a/app/views/warehouses/_warehouse.html.slim
+++ b/app/views/warehouses/_warehouse.html.slim
@@ -1,6 +1,8 @@
 tr.hoverable id="#{dom_id warehouse}" data-action="click->table#goTo" data-table-url-param=warehouse_path(warehouse)
   td
     strong = warehouse.name
+    - if warehouse.is_default?
+      span.danger *
     br
     = warehouse.external_name
   td.mono = warehouse.cbm
