--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -32,3 +32,28 @@ i.icn {
   filter: contrast(0.7);
   color: rgb(var(--rgb-inactive-status-color));
 }
+
+.has-memo {
+  position: relative;
+  cursor: pointer;
+}
+
+.has-memo:hover .memo-notice {
+  display: flex;
+  opacity: 1;
+}
+
+.memo-notice {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  box-shadow: var(--box-shadow-menu);
+  border-radius: var(--border-radius);
+  background-color: var(--mark-background-color);
+  padding: 16px 24px 32px 16px;
+  width: 250px;
+  color: var(--mark-color);
+  font-size: smaller;
+}
